<resources>
    <string name="app_name">daily_plan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">13286810620@163.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_title">ky</string>
    <string name="personal_plan">plan</string>
    <string name="personal_worked">worked</string>
    <string name="personal_finished">finished</string>
    <string name="personal_unfinished">unfinished</string>
    <string name="personal_blog">blog</string>
    <string name="personal_github">github</string>
    <string name="personal">personal</string>
    <string name="tv_startTime">start-time:</string>
    <string name="tv_timeLength">time-length:</string>
    <string name="title_activity_alter">AlterActivity</string>
    <string name="tv_startTime_hint">choose a start-time</string>
    <string name="tv_timeLength_hint">choose a time-length</string>
    <string name="bt_choose">choose</string>
    <string name="tv_progress">finished-progress：</string>
    <string name="tv_content">content:</string>
    <string name="bt_finished">ok</string>
    <string name="et_content_hint">input your content</string>
</resources>
