<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/personal_plan" />
        <item
            android:id="@+id/nav_worked"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/personal_worked" />
        <item
            android:id="@+id/nav_finished"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/personal_finished" />
        <item
            android:id="@+id/nav_unfinished"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/personal_unfinished" />
    </group>

    <item android:title="@string/personal">
        <menu>
            <item
                android:id="@+id/nav_blog"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/personal_blog" />
            <item
                android:id="@+id/nav_github"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/personal_github" />
        </menu>
    </item>

</menu>
