<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AlterActivity">

    <TextView
        style="@style/tv_time_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_startTime"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_timeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_startTime_hint"
            android:textAllCaps="false" />
    </LinearLayout>

    <TextView
        style="@style/tv_time_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_timeLength"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_timeLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_timeLength_hint"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_progress"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50%" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_content"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_content_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/bt_finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_finished"
        android:onClick="finishedChange"
        android:textAllCaps="false"
        tools:ignore="OnClick" />
</LinearLayout>